--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbz01B8h0pwS4rhjOjNx86OkROAtjnUFl3bFHqI3unfaRCIgTKCXFNfHXGgj4bDn902VGg/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
